// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseNotice component When is a snackbar matches the snapshot 1`] = `
<transition-stub
  enteractiveclass="enterActive"
  enterclass="enter"
  entertoclass="enterTo"
  leaveactiveclass="leaveActive"
  leaveclass="leave"
  leavetoclass="leaveTo"
>
  <div
    class="snackbar notice info"
    style=""
  >
    <containerblock-stub>
      <div
        class="content"
      >
        <div
          class="iconBlock"
        >
          <baseicon-stub
            id="info.icon.svg"
          />
        </div>
         
        <div>
          <span
            class="title"
          >
            
            Você precisa corrigir os erros a baixo
          
          </span>
           
          <!---->
        </div>
      </div>
    </containerblock-stub>
  </div>
</transition-stub>
`;

exports[`BaseNotice component When there is no message matches the snapshot 1`] = `
<transition-stub
  enteractiveclass="enterActive"
  enterclass="enter"
  entertoclass="enterTo"
  leaveactiveclass="leaveActive"
  leaveclass="leave"
  leavetoclass="leaveTo"
>
  <div
    class="notice warning"
    style=""
  >
    <containerblock-stub>
      <div
        class="content"
      >
        <div
          class="iconBlock"
        >
          <baseicon-stub
            id="warning.icon.svg"
          />
        </div>
         
        <div>
          <span
            class="title"
          >
            
            title for foo
          
          </span>
           
          <!---->
        </div>
      </div>
    </containerblock-stub>
  </div>
</transition-stub>
`;

exports[`BaseNotice component matches the snapshot when type is equal to danger 1`] = `
<transition-stub
  enteractiveclass="enterActive"
  enterclass="enter"
  entertoclass="enterTo"
  leaveactiveclass="leaveActive"
  leaveclass="leave"
  leavetoclass="leaveTo"
>
  <div
    class="notice danger"
    style=""
  >
    <containerblock-stub>
      <div
        class="content"
      >
        <div
          class="iconBlock"
        >
          <baseicon-stub
            id="warning.icon.svg"
          />
        </div>
         
        <div>
          <span
            class="title"
          >
            
            warning title!
          
          </span>
           
          <p
            class="message"
          >
            
            warning message
          
          </p>
        </div>
      </div>
    </containerblock-stub>
  </div>
</transition-stub>
`;

exports[`BaseNotice component matches the snapshot when type is equal to info 1`] = `
<transition-stub
  enteractiveclass="enterActive"
  enterclass="enter"
  entertoclass="enterTo"
  leaveactiveclass="leaveActive"
  leaveclass="leave"
  leavetoclass="leaveTo"
>
  <div
    class="notice info"
    style=""
  >
    <containerblock-stub>
      <div
        class="content"
      >
        <div
          class="iconBlock"
        >
          <baseicon-stub
            id="warning.icon.svg"
          />
        </div>
         
        <div>
          <span
            class="title"
          >
            
            warning title!
          
          </span>
           
          <p
            class="message"
          >
            
            warning message
          
          </p>
        </div>
      </div>
    </containerblock-stub>
  </div>
</transition-stub>
`;

exports[`BaseNotice component matches the snapshot when type is equal to success 1`] = `
<transition-stub
  enteractiveclass="enterActive"
  enterclass="enter"
  entertoclass="enterTo"
  leaveactiveclass="leaveActive"
  leaveclass="leave"
  leavetoclass="leaveTo"
>
  <div
    class="notice success"
    style=""
  >
    <containerblock-stub>
      <div
        class="content"
      >
        <div
          class="iconBlock"
        >
          <baseicon-stub
            id="warning.icon.svg"
          />
        </div>
         
        <div>
          <span
            class="title"
          >
            
            warning title!
          
          </span>
           
          <p
            class="message"
          >
            
            warning message
          
          </p>
        </div>
      </div>
    </containerblock-stub>
  </div>
</transition-stub>
`;

exports[`BaseNotice component matches the snapshot when type is equal to warning 1`] = `
<transition-stub
  enteractiveclass="enterActive"
  enterclass="enter"
  entertoclass="enterTo"
  leaveactiveclass="leaveActive"
  leaveclass="leave"
  leavetoclass="leaveTo"
>
  <div
    class="notice warning"
    style=""
  >
    <containerblock-stub>
      <div
        class="content"
      >
        <div
          class="iconBlock"
        >
          <baseicon-stub
            id="warning.icon.svg"
          />
        </div>
         
        <div>
          <span
            class="title"
          >
            
            warning title!
          
          </span>
           
          <p
            class="message"
          >
            
            warning message
          
          </p>
        </div>
      </div>
    </containerblock-stub>
  </div>
</transition-stub>
`;
